--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gloomy Discord Server</title>
+    <link rel="icon" 
+      type="icon" 
+      href="favicon.ico">
+    <title>gloomy</title>
 </head>
 <body>
     <div class="wrapper">
