--- a/invite/index.html
+++ b/invite/index.html
@@ -5,6 +5,27 @@
       <meta http-equiv = "refresh" content = "0; url = https://www.tutorialspoint.com" />
    </head>
    <body>
-      <p>Redirecting...</p>
+      <h1>Redirecting, please wait...</h1>
+      <p>If you do not get redirected, <a href="https://discord.gg/YSWK8Nu">click here.</a></p>
    </body>
 </html>
+
+<style>
+   body {
+      height: 100%;
+      margin: 0;
+      font-family: 'DM Sans', sans-serif;
+      color: white;
+      background-color: #292929;
+      display: flex;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+   }
+
+   a {
+      text-decoration: none;
+      color: rgb(84, 104, 216);
+   }
+</style>
