--- a/rules.html
+++ b/rules.html
@@ -14,7 +14,7 @@
             no racism / sexism / homophobia, etc <br>
             no dm adv / spam / NSFW / gore <br>
             no doxing / ddosing / exposing private info <br>
-            follow discord ToS & guidelines <br>
+            follow discord <a href="https://discord.com/terms">ToS</a> & <a href="https://discord.com/guidelines">guidelines</a> <br>
             <br>
             please don't say any slurs! (this includes videos, gifs etc.) <br class="hidden">
             even if you're "allowed" to say them. don't even try to argue about it. thank you! <br> <br>
@@ -22,7 +22,7 @@
             2 slurs = kick <br>
             3+ slurs = ban <br>
         </p>
-        <a href="index.html">Back</a>
+        <a href="index.html" class="back-btn">Back</a>
     </div> 
 </body>
 </html>
@@ -43,8 +43,13 @@
         margin: 10px 0;
         padding-top: 20px;
     }
-
+    
     a {
+        color: rgb(130, 149, 214);
+        text-decoration: none;
+    }
+
+    .back-btn{
         text-decoration: none;
         color: rgb(130, 149, 214);
         font-size: 20px;
