--- a/invite/index.html
+++ b/invite/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Gloomy Discord Server Invite</title>
-      <meta http-equiv = "refresh" content = "0; url = https://www.tutorialspoint.com" />
+      <meta http-equiv = "refresh" content = "0; url = https://discord.gg/YSWK8Nu" />
    </head>
    <body>
       <h1>Redirecting, please wait...</h1>
