Fix invite link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>We are a chill discord server where you can hang out, talk to people and play games. <br class="hidden">Special things we offer are custom bots: with fun Anime features or a chatbot you can talk to!</p>  
             
             <!-- links -->
-            <a href="https://discord.gg/YSWK8Nu" class="links">Join Server</a>
+            <a href="https://discord.gg/cxG6Xrj" class="links">Join Server</a>
             <a href="rules.html" class="links">Server Rules</a>
             <a href="https://disboard.org/server/680785053202251797" class="links">Leave a review on Disboard!</a>
         </div>
