forgot the click here button
smh imagine








you forgor 💀

--- a/invite/index.html
+++ b/invite/index.html
@@ -6,7 +6,7 @@
    </head>
    <body>
       <h1>Redirecting, please wait...</h1>
-      <p>If you do not get redirected, <a href="https://discord.gg/YSWK8Nu">click here.</a></p>
+      <p>If you do not get redirected, <a href="https://discord.gg/cxG6Xrj">click here.</a></p>
    </body>
 </html>
 
