Add revamp notice

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="content">
             <img src="server-icon.png" alt="icon"/>
             <h1>gloomy</h1>  
-            <p>We are a chill discord server where you can hang out, talk to people and play games. <br class="hidden">Special things we offer are custom bots: with fun Anime features or a chatbot you can talk to!</p>  
+            <p>We are a chill discord server where you can hang out, talk to people and play games. <br class="hidden">Special things we offer are custom bots: with fun Anime features or a chatbot you can talk to! <br> Currently undergoing a revamp!</p>  
             
             <!-- links -->
             <a href="https://discord.gg/cxG6Xrj" class="links">Join Server</a>
